# Space_Shooter

./: .gitignore  CMakeLists.txt  Makefile  README.md
res/shaders/: text.frag  text.vert  texture.frag  texture.vert  texture_rgba.frag  texture_rgba.vert
src/: main.c  state.h
src/audio/: audio.h
src/entity/: collider.c  collider.h  player.c  player.h  rock.c  rock.h
src/gfx/: buffer.c  buffer.h  shader.c  shader.h  text.c  text.h  texture.c  texture.h  vao.c  vao.h  vertex.c  vertex.h  window.c  window.h
src/util/: types.h  util.h
